# gaussian-utils

./: .gitignore  README.org  pyproject.toml
gaussian_utils/: __main__.py  config.py  conformer_search.py  conformer_searcher.py  gaussian_input_generator.py  gaussian_result_viewer.py  gaussian_results_extractor.py  molecule_reader.py
gaussian_utils/templates/: gaussian_input.gjf.j2
